<resources>
    <string name="app_name">RockPaperScissors</string>
    <string name="versus">vs.</string>
    <string name="player">PLAYER</string>
    <string name="computer">COMPUTER</string>
    <string name="choice">What your choice?</string>
    <string name="result">- RESULT -</string>
    <string name="result2"><![CDATA["???"]]></string>
    <string name="win">WIN</string>
    <string name="lose">LOSE</string>
    <string name="draw">DRAW</string>
    <string name="rating">0승 0무 0패</string>
    <string name="reset">RESET</string>
</resources>
